0.04

0.03 2015-03-31T23:05:39+02:00
 - Add comments to tests.
 - Fix warning with no element on stack.
 - Improve doc for '*' as rules key.
 - Remove comments.
 - Remove global variables.
 - Rewrite SEE ALSO section to proper Task.

0.02 2015-02-09T07:49:11+01:00
 - Add examples directory.
 - Fix minimal version of PYX::Parser.

0.01 2015-02-06T16:15:04+01:00
 - First version.