@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.16 version.
 
 0.03 2015-03-31T23:05:39+02:00
  - Add comments to tests.
